# TraderCat

./: .gitignore  README.md  function_app.py  host.json  main.py  openbb_sample_data.json  pyproject.toml  requirements-dev.txt  requirements.txt  sample_symbols.yml  symbols.txt  symbols.yml
.github/workflows/: main_tradercat.yml
trade_bot/: bot.py  main.py
trade_bot/data/: market_data_provider.py  openbb_provider.py
trade_bot/execution/: trade_execution.py
trade_bot/notification/: base.py  discord.py
trade_bot/strategy/: bollinger_band_strategy.py  divergence_strategy.py  hidden_divergence_strategy.py  ma_strategy.py  signal_model.py  trading_strategy.py
